force-app/main/default/objects/Lead/fields/Affectation_web__c.field-meta.xml
<CustomField>
    <fullName>Affectation_web__c</fullName>
    <label>Affectation web</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agence</fullName>
            </value>
            <value>
                <fullName>Centre d&apos;appel</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>