force-app/main/default/objects/Lead/fields/Campagne_source__c.field-meta.xml
<CustomField>
    <fullName>Campagne_source__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campagne / Événement</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>La campagne n&apos;est pas active.</errorMessage>
        <filterItems>
            <field>Campaign.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>