force-app/main/default/objects/Lead/fields/canal__c.field-meta.xml
<CustomField>
    <fullName>canal__c</fullName>
    <label>Canal</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>LeadSource</controllingField>
        <restricted>true</restricted>
        <valueSetName>Canaux</valueSetName>
    </valueSet>
</CustomField>