force-app/main/default/objects/Lead/fields/Categorie_du_prospect__c.field-meta.xml
<CustomField>
    <fullName>Categorie_du_prospect__c</fullName>
    <label>Catégorie du prospect</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Société</fullName>
            </value>
            <value>
                <fullName>Grand compte</fullName>
            </value>
            <value>
                <fullName>Administration publiques</fullName>
                <label>Administration publique</label>
            </value>
            <value>
                <fullName>Ambassade</fullName>
            </value>
            <value>
                <fullName>consulat</fullName>
                <label>Consulat</label>
            </value>
            <value>
                <fullName>Diplomate</fullName>
            </value>
            <value>
                <fullName>ONG</fullName>
            </value>
            <value>
                <fullName>État civil</fullName>
                <isActive>false</isActive>
                <label>État civil</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>