force-app/main/default/objects/Lead/fields/Convention__c.field-meta.xml
<CustomField>
    <fullName>Convention__c</fullName>
    <label>Convention</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Conventions</valueSetName>
    </valueSet>
</CustomField>