force-app/main/default/objects/Lead/fields/Date_de_naissance__c.field-meta.xml
<CustomField>
    <fullName>Date_de_naissance__c</fullName>
    <label>Date de naissance</label>
    <type>Date</type>
</CustomField>