force-app/main/default/objects/Lead/fields/Distribute_Disclaimer__c.field-meta.xml
<CustomField>
    <fullName>Distribute_Disclaimer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Distribute Disclaimer</label>
    <type>Checkbox</type>
</CustomField>