force-app/main/default/objects/Lead/fields/Email_Manager_N_1__c.field-meta.xml
<CustomField>
    <fullName>Email_Manager_N_1__c</fullName>
    <label>Email Manager N+1</label>
    <type>Email</type>
</CustomField>