force-app/main/default/objects/Lead/fields/Email_Manager_N_2__c.field-meta.xml
<CustomField>
    <fullName>Email_Manager_N_2__c</fullName>
    <label>Email Manager N+2</label>
    <type>Email</type>
</CustomField>