force-app/main/default/objects/Lead/fields/Email_opt_in__c.field-meta.xml
<CustomField>
    <fullName>Email_opt_in__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Email opt in</label>
    <type>Checkbox</type>
</CustomField>