force-app/main/default/objects/Lead/fields/ICE__c.field-meta.xml
<CustomField>
    <fullName>ICE__c</fullName>
    <label>ICE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>