force-app/main/default/objects/Lead/fields/is_Web__c.field-meta.xml
<CustomField>
    <fullName>is_Web__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Web</label>
    <type>Checkbox</type>
</CustomField>