force-app/main/default/objects/Lead/fields/Marque_d_interet__c.field-meta.xml
<CustomField>
    <fullName>Marque_d_interet__c</fullName>
    <label>Marque d&apos;intérêt</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type_d_interet_du_prospect__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Marques</valueSetName>
    </valueSet>
</CustomField>