force-app/main/default/objects/Lead/fields/Marque_d_interet_Text__c.field-meta.xml
<CustomField>
    <fullName>Marque_d_interet_Text__c</fullName>
    <label>Marque d&apos;intérêt Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>