force-app/main/default/objects/Lead/fields/Ne_pas_rappeler__c.field-meta.xml
<CustomField>
    <fullName>Ne_pas_rappeler__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ne pas rappeler</label>
    <type>Checkbox</type>
</CustomField>