force-app/main/default/objects/Lead/fields/Nom_de_l_entreprise__c.field-meta.xml
<CustomField>
    <fullName>Nom_de_l_entreprise__c</fullName>
    <label>Nom de l&apos;entreprise</label>
    <length>255</length>
    <type>Text</type>
</CustomField>