force-app/main/default/objects/Lead/fields/Phone_opt_in__c.field-meta.xml
<CustomField>
    <fullName>Phone_opt_in__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Phone opt in</label>
    <type>Checkbox</type>
</CustomField>