force-app/main/default/objects/Lead/fields/Qualification_web_to_lead__c.field-meta.xml
<CustomField>
    <fullName>Qualification_web_to_lead__c</fullName>
    <label>Qualification web to lead</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non qualifié</fullName>
                <default>true</default>
                <label>Non qualifié</label>
            </value>
            <value>
                <fullName>À requalifier</fullName>
            </value>
            <value>
                <fullName>Intéressé</fullName>
            </value>
            <value>
                <fullName>Pas intéressé</fullName>
            </value>
            <value>
                <fullName>Faux numéro</fullName>
            </value>
            <value>
                <fullName>Hors cible</fullName>
            </value>
            <value>
                <fullName>À rappeler</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>