force-app/main/default/objects/Lead/fields/Serie_Modele__c.field-meta.xml
<CustomField>
    <fullName>Serie_Modele__c</fullName>
    <label>Série / Modèle</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Marque_d_interet__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Series_Modeles</valueSetName>
    </valueSet>
</CustomField>