force-app/main/default/objects/Lead/fields/Serie_Modele_Text__c.field-meta.xml
<CustomField>
    <fullName>Serie_Modele_Text__c</fullName>
    <label>Série / Modèle Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>