force-app/main/default/objects/Lead/fields/SMS_opt_in__c.field-meta.xml
<CustomField>
    <fullName>SMS_opt_in__c</fullName>
    <defaultValue>true</defaultValue>
    <label>SMS opt in</label>
    <type>Checkbox</type>
</CustomField>