force-app/main/default/objects/Lead/fields/Tech_lancement_de_sync_apres_creation__c.field-meta.xml
<CustomField>
    <fullName>Tech_lancement_de_sync_apres_creation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tech lancement de sync apres creation</label>
    <type>Checkbox</type>
</CustomField>