force-app/main/default/objects/Lead/fields/TECH_marque_ko__c.field-meta.xml
<CustomField>
    <fullName>TECH_marque_ko__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TECH marque ko</label>
    <type>Checkbox</type>
</CustomField>