force-app/main/default/objects/Lead/fields/Type_d_interet_du_prospect__c.field-meta.xml
<CustomField>
    <fullName>Type_d_interet_du_prospect__c</fullName>
    <label>Type d&apos;intérêt du prospect</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VN</fullName>
            </value>
            <value>
                <fullName>VO</fullName>
            </value>
            <value>
                <fullName>SAV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>