force-app/main/default/objects/Lead/fields/X18_year_Disclaimer__c.field-meta.xml
<CustomField>
    <fullName>X18_year_Disclaimer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>18 year Disclaimer</label>
    <type>Checkbox</type>
</CustomField>