force-app/main/default/objects/Lead/recordTypes/Particulier.recordType-meta.xml
<RecordType>
    <fullName>Particulier</fullName>
    <active>true</active>
    <businessProcess>SMEIA Lead Process</businessProcess>
    <label>Particulier</label>
</RecordType>