force-app/main/default/objects/Lead/recordTypes/Professionnel.recordType-meta.xml
<RecordType>
    <fullName>Professionnel</fullName>
    <active>true</active>
    <businessProcess>SMEIA Lead Process</businessProcess>
    <label>Professionnel</label>
</RecordType>