force-app/main/default/objects/Lead/validationRules/Lead_VR_001_Civilite_Obligatoire.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_VR_001_Civilite_Obligatoire</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Salutation,&apos;&apos;) &amp;&amp; not($User.Bypass_VR__c )</errorConditionFormula>
    <errorDisplayField>Salutation</errorDisplayField>
    <errorMessage>Merci de renseigner la civilité</errorMessage>
</ValidationRule>