force-app/main/default/objects/Lead/validationRules/Lead_VR_002_Prenom_Obligatoire.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_VR_002_Prenom_Obligatoire</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(FirstName)</errorConditionFormula>
    <errorDisplayField>FirstName</errorDisplayField>
    <errorMessage>Merci de renseigner le prénom</errorMessage>
</ValidationRule>