force-app/main/default/objects/Lead/validationRules/Lead_VR_003_PrenomSansCaractereSpeciaux.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_VR_003_PrenomSansCaractereSpeciaux</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISBLANK(FirstName)) &amp;&amp; NOT(REGEX( FirstName,&quot;^[a-z  A-Z]*$&quot;))</errorConditionFormula>
    <errorDisplayField>FirstName</errorDisplayField>
    <errorMessage>Merci de renseigner le prénom sans caractères spéciaux</errorMessage>
</ValidationRule>