force-app/main/default/objects/Lead/validationRules/Lead_VR_004_NomSansCaractereSpeciaux.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_VR_004_NomSansCaractereSpeciaux</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISBLANK(LastName)) &amp;&amp; NOT(REGEX( LastName,&quot;^[a-z  A-Z]*$&quot;))</errorConditionFormula>
    <errorDisplayField>LastName</errorDisplayField>
    <errorMessage>Merci de renseigner le nom sans caractères spéciaux</errorMessage>
</ValidationRule>