force-app/main/default/objects/Lead/validationRules/Lead_VR_005_Indicatif_Telephone_Mobile.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_VR_005_Indicatif_Telephone_Mobile</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(LEFT(MobilePhone,3)=&apos;+34&apos; &amp;&amp; LEN(MobilePhone) = 12)
&amp;&amp;
NOT(LEFT(MobilePhone,3)=&apos;+33&apos; &amp;&amp; LEN(MobilePhone) = 12)
&amp;&amp;
NOT(LEFT(MobilePhone,3)=&apos;+39&apos; &amp;&amp; LEN(MobilePhone) = 12)
&amp;&amp;
NOT(LEFT(MobilePhone,4)=&apos;+971&apos; &amp;&amp; LEN(MobilePhone) = 13)
&amp;&amp;
NOT(LEFT(MobilePhone,4)=&apos;+966&apos; &amp;&amp; LEN(MobilePhone) = 13)
&amp;&amp;
NOT(LEFT(MobilePhone,4)=&apos;+212&apos; &amp;&amp; LEN(MobilePhone) = 13)
&amp;&amp; not($User.Bypass_VR__c )</errorConditionFormula>
    <errorDisplayField>MobilePhone</errorDisplayField>
    <errorMessage>Merci de corriger le numéro de téléphone (Exemple :+2126XXXXXX, +34..., +33..., +39..., +971..., +966..)</errorMessage>
</ValidationRule>