force-app/main/default/objects/Lead/validationRules/Lead_VR_006_Email_obligatoire_conversion.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_VR_006_Email_obligatoire_conversion</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Email)
&amp;&amp; IsConverted</errorConditionFormula>
    <errorMessage>Merci de compléter le champ email avant conversion</errorMessage>
</ValidationRule>