force-app/main/default/objects/Lead/validationRules/Lead_VR_010_Validation_statut_Prospect.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_VR_010_Validation_statut_Prospect</fullName>
    <active>true</active>
    <errorConditionFormula>( IsConverted &amp;&amp; NOT(ISPICKVAL(Status, &apos;Compte&apos;)))
||
(!IsConverted &amp;&amp; NOT(ISPICKVAL(Status, &apos;Prospect&apos;)))</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>Le statut du prospect n&apos;est conforme. Veuillez modifier le statut ou contactez votre administrateur.</errorMessage>
</ValidationRule>