force-app/main/default/objects/Lead/validationRules/Lead_VR_013_Source.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_VR_013_Source</fullName>
    <active>true</active>
    <errorConditionFormula>IF( NOT(is_Web__c) &amp;&amp;  (ISPICKVAL(LeadSource, &quot;Website&quot;)  ||  ISPICKVAL(LeadSource, &quot;Lead Ad&quot;) ||  ISPICKVAL(LeadSource, &quot;Modération réseaux sociaux&quot;) ) ,true,false)</errorConditionFormula>
    <errorDisplayField>LeadSource</errorDisplayField>
    <errorMessage>Source invalide</errorMessage>
</ValidationRule>