force-app/main/default/objects/Lead/validationRules/Lead_VR_014_Address_oblig_conversion.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_VR_014_Address_oblig_conversion</fullName>
    <active>true</active>
    <errorConditionFormula>(ISBLANK(Address))
&amp;&amp; IsConverted</errorConditionFormula>
    <errorMessage>Merci de compléter le champ adresse avant conversion</errorMessage>
</ValidationRule>