force-app/main/default/objects/Lead/validationRules/Lead_VR_015_Rating_oblig_conversion.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_VR_015_Rating_oblig_conversion</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Rating,&apos;&apos;)
&amp;&amp; IsConverted</errorConditionFormula>
    <errorMessage>Merci de compléter le champ température avant conversion</errorMessage>
</ValidationRule>