force-app/main/default/objects/Lead/validationRules/Lead_VR_016_methode_oblig_conversion.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_VR_016_methode_oblig_conversion</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Methode_preferee_de_contact__c,&apos;&apos;)
&amp;&amp; IsConverted</errorConditionFormula>
    <errorMessage>Merci de compléter les champ méthode de contact préférée du prospec avant conversion</errorMessage>
</ValidationRule>