force-app/main/default/objects/Lead/listViews/My_Leads.listView-meta.xml
<ListView>
    <fullName>My_Leads</fullName>
    <columns>LEAD.RECORDTYPE</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>FULL_NAME</columns>
    <columns>Campagne_source__c</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.MOBILE_PHONE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>Marque_d_interet__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tous les prospects</label>
</ListView>