force-app/main/default/objects/Lead/listViews/Web_to_lead_qualifier.listView-meta.xml
<ListView>
    <fullName>Web_to_lead_qualifier</fullName>
    <columns>is_Web__c</columns>
    <columns>LEAD.RECORDTYPE</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.MOBILE_PHONE</columns>
    <columns>Marque_d_interet__c</columns>
    <columns>LEAD.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>is_Web__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Affectation_web__c</field>
        <operation>equals</operation>
        <value>Agence</value>
    </filters>
    <filters>
        <field>Qualification_web_to_lead__c</field>
        <operation>equals</operation>
        <value>Non qualifié,À requalifier,À rappeler</value>
    </filters>
    <label>Web to lead à qualifier</label>
</ListView>